# cmeta

./: .gitignore  CMakeLists.txt  README.md  cmeta.cbp  cmeta.depend  main.c
cmeta/: cmeta.c  cmeta.h
examples/cmeta/: main.c
examples/jmeta/: cJSON-clone.sh  jmeta.c  jmeta.cbp  jmeta.depend  jmeta.h  main.c
examples/sample_linux/: main.c  sample_linux.cbp  sample_linux.depend
examples/xmeta/: main.c  xmeta.c  xmeta.cbp  xmeta.depend  xmeta.h
include/: cmeta.h  jmeta.h  xmeta.h
samples/jmeta/: jmeta.c  jmeta.h
src/: cmeta.c  jmeta.c  xmeta.c
